-More tweaks for RTL languages like Arabic and Hebrew (bug report by
 Ansgar Bohmann)
-On a Thai system, don't use Thai numerals in the card browser if the language
 is set to English (request by Mark).
-Take time zone information into account when displaying creation date of
 card in browser.
-When trying to deactivate a card type in use, show name of the card type in
 the error message.
-Fix CTRL+F shortcut for inserting flash and CTRL+C shortcut for copying.
 (reported by Gnome).
-Backspace and delete shortcuts to delete the current card work again
 (reported by Dylan Gordhan).


Mnemosyne 2.2 : 2012-12-04

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

-Added menu option to detect duplicates in the database.
-Made the cramming scheduler more configurable. Cards can now be studied in
 random order, earliest first, lastest first or most lapses first. Also,
 you have the option of whether to save the scheduler state or not when exiting
 the program.
-The way the tag field is prefilled for new cards is changed. By default, the
 last used tag is used, regardless of card type. If you want the pre-2.2
 behaviour, where the last used tag is remembered per card type, there is a
 bundled plugin you can activate.
-When exporting to the 'cards' format, the latex files are now pregenerated
 and bundled (requested by Mark).
-Fix errors coming from loading config files (reported by knutflatland and
 many others).
-Ported missing import file formats from 1.x: SuperMemo7 text, SuperMemo from
 Palm, Cuecard WCU.
-Double-clicking on a saved set in 'Activate cards' now automatically selects
 the set and closes the window (requested by Michael Campbell).
-Add "Insert Flash" option (Note: Flash needs to be installed on your system
 for this to work) (requested by Gnome).
-Added support for video files under Windows (contrary to Linux, they will
 play in an external window using mplayer).